# SentinelAI

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile
backend/sentinelai/: __init__.py  config.py  database.py  logging.py  metrics.py  models.py  tracing.py
backend/sentinelai/ai_orchestration/: main.py
backend/sentinelai/analytics_service/: main.py
backend/sentinelai/api_gateway/: main.py
backend/sentinelai/auth_service/: main.py
backend/sentinelai/deployment_analysis/: main.py
backend/sentinelai/incident_intelligence/: main.py
backend/sentinelai/log_processing/: main.py
backend/sentinelai/memory_context/: main.py
backend/sentinelai/metrics_processing/: main.py
backend/sentinelai/ml/: anomaly_detection.py
backend/sentinelai/notification_service/: main.py
backend/sentinelai/streaming_pipeline/: main.py
backend/sentinelai/trace_correlation/: main.py
backend/sentinelai/vector_retrieval/: main.py
docs/: api-reference.md  architecture.md  configuration.md  getting-started.md
docs/adr/: ADR-001-microservices-architecture.md  ADR-002-kafka-event-streaming.md  ADR-003-vllm-llm-inference.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
infrastructure/: docker-compose.prod.yml  docker-compose.yml  prometheus.yml
infrastructure/helm/sentinelai/: Chart.yaml  values.yaml
infrastructure/kubernetes/manifests/: deployments.yaml
