[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelai"
version = "0.1.0"
description = "Autonomous AI Reliability Engineer for distributed cloud-native systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "SentinelAI Team", email = "team@sentinelai.io"}
]
keywords = ["sre", "reliability", "ai", "observability", "incident-management", "anomaly-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "starlette>=0.35.0",
    "s starlette-context>=0.3.4",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",

    # Redis
    "redis>=5.0.0",
    "hiredis>=2.3.0",

    # Kafka
    "aiokafka>=0.10.0",
    "kafka-python-ng>=2.2.0",

    # ClickHouse
    "clickhouse-driver>=0.2.6",
    "clickhouse-sqlalchemy>=0.2.0",

    # Queue/Workers
    "celery>=5.3.0",
    "temporalio>=1.0.0",

    # AI/LLM
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "dspy>=2.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "vllm>=0.3.0",
    "litellm>=1.0.0",

    # ML
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "pyod>=1.1.0",
    "prophet>=1.1.0",

    # Observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "prometheus-client>=0.19.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "email-validator>=2.1.0",

    # API
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",

    # Utils
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-extra-types>=2.1.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "json-logging>=1.3.0",
    "python-json-logger>=2.0.0",
    "aio-pika>=9.3.0",
    "pika>=1.3.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "tomli>=2.0.0",
    "typing-extensions>=4.9.0",
    "annotated-types>=0.6.0",
    "cachetools>=5.3.0",
    "pytz>=2024.1",
    "httpx-sse>=0.4.0",
    "ecdsa>=0.18.0",
    "rsa>=4.9",
    "pyasn1>=0.5.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "urllib3>=2.1.0",
    "certifi>=2024.2.0",
    "idna>=3.6",
    "sniffio>=1.3.0",
    "h11>=0.14.0",
    "anyio>=4.1.0",
    "outcome>=1.3.0",
    "sortedcontainers>=2.4.0",
    "greenlet>=3.0.0",
    "async-timeout>=4.0.0",
    "frozenlist>=1.4.0",
    "aiosignal>=1.3.0",
    "yarl>=1.9.0",
    "attrs>=23.2.0",
    "cchardet>=2.1.7",
    "charset-normalizer>=3.3.0",
    "multidict>=6.0.0",
    "aiodns>=3.1.0",
    "cffi>=1.16.0",
    "pycparser>=2.21",
    "cors>=1.0.1",
    "httptools>=0.6.0",
    "uvloop>=0.19.0",
    "watchfiles>=0.21.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "pydantic-core>=2.14.0",
    "fastjsonschema>=2.19.0",
    "click>=8.1.0",
    "markdown-it-py>=3.0.0",
    "rich>=13.7.0",
    "shellingham>=1.5.0",
    "typer>=0.9.0",
    "shtab>=1.7.0",
    "colorama>=0.4.6",
    "tomlkit>=0.12.0",
    "websockets>=12.0",
    "wsproto>=1.2.0",
    "h2>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-env>=1.1.0",
    "coverage>=7.4.0",
    "coverage-enable-subprocess>=1.0.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pip-audit>=3.0.0",
    "pip-tools>=7.3.0",
    "nox>=2024.1.0",
    "towncrier>=24.1.0",
    "sphinx>=7.2.0",
    "myst-parser>=3.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://sentinelai.io"
Documentation = "https://docs.sentinelai.io"
Repository = "https://github.com/sentinelai/sentinelai"
Issues = "https://github.com/sentinelai/sentinelai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelai*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
sentinelai = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ASYNC", # flake8-async
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PGH", # grep-pytest
    "PL",  # pylint
    "TRY", # tryceratops
    "FLK", # flake8-bugbear
    "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "C901",   # too complex
    "T201",   # print found
    "TRY003", # raise-from
    "ASYNC110", # consider using async for
    "SIM115", # use context handler for opening files
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR0912", "ARG"]

[tool.black]
target-version = ["py311"]
line-length = 100
indent-width = 4

[tool.isort]
profile = "black"
line-length = 100
indent-width = 4
multi-line-output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=sentinelai",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--tb=short",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
]

[tool.coverage.run]
source = ["sentinelai"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
title = "SentinelAI Coverage Report"

[tool.pre-commit]
default_stages = ["pre-commit"]
repos = [
    {
        repo = "https://github.com/astral-sh/ruff-pre-commit",
        rev = "v0.1.0",
        hooks = [
            {id = "ruff", args = ["--fix"]},
            {id = "ruff-format"},
        ],
    },
    {
        repo = "https://github.com/pre-commit/mirrors-mypy",
        rev = "v1.8.0",
        hooks = [{id = "mypy", args = ["--no-error-summary"]}],
    },
]
